<resources>
    <string name="app_name">MultiRegister</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="header">Create your Google Account</string>
    <string name="sub_header">One free account gets you into everything Google.</string>
    <string name="footer">Take it all with you</string>
    <string name="register_account">Register for an account</string>
    <string name="names_header">Create a Google Account</string>
    <string name="names_info_label">We would like to know you before we start account registration. Please fill your first name and last name below.</string>
    <string name="next">Continue</string>
    <string name="back">Back</string>
    <string name="basic_info">Please enter your birth day and gender below:</string>
    <string name="day_label">Day</string>
    <string name="month_label">Month</string>
    <string name="year_label">Year</string>
    <string name="day_gender">Gender</string>
    <string name="custom_gender_prompt">What\'s your gender?</string>
    <string name="username_header">How you\'ll sign in</string>
    <string name="username_subheader">You\'ll use this username to sign in to your Google account</string>
    <string name="gmail_suffix">\@gmail.com</string>
    <string name="username_rules">Only use characters A–Z, a–z, 0–9</string>
    <string name="password_header">Create Password</string>
    <string name="password_subheader">Create a strong password with a mixture of letter, numbes and symbols</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_help">The password must have at least 8 characters</string>
    <string name="phone_number_header">Add Phone Number</string>
    <string name="phone_number_justification">This phone number will be used for such things as password reset, receiving shared photos and videos and more personalised Google services including ads</string>
    <string name="countries">Country</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_privacy_statement">This won\'t make your phone number public</string>
    <string name="sms_usage">Google will verify that this number with SMS (charges may apply) or by exchanging your number and device information with your mobile operator. If it belongs to this phone we\'ll verify occasionally so that your account stays up to date. Any number verified with on this phone will also be added to your account.</string>
    <string name="skip">Skip</string>
    <string name="accept_terms">Accept Terms and Continue</string>
    <string name="privacy_header">Please review Google privacy terms before continuing</string>
    <string name="first_name_empty_error">First name cannot be empty. Please type your first name</string>
    <string name="last_name_empty_error">Last name cannot be empty. Please type your first name</string>
    <string name="first_name_label">First name</string>
    <string name="last_name_label">Last name</string>
</resources>
